--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,11 @@ services:
             - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
             - FACEBOOK_CLIENT_ID=${FACEBOOK_CLIENT_ID}
             - FACEBOOK_CLIENT_SECRET=${FACEBOOK_CLIENT_SECRET}
+            - POSTGRES_DB=${POSTGRES_DB}
+            - POSTGRES_USER=${POSTGRES_USER}
+            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+            - POSTGRES_HOST=${POSTGRES_HOST}
+            - POSTGRES_PORT=${POSTGRES_PORT}
         ports:
             - "3000:3000"
         depends_on:
