--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@radix-ui/react-separator": "^1.1.6",
         "@radix-ui/react-slider": "^1.3.4",
         "@radix-ui/react-slot": "^1.2.2",
+        "@reduxjs/toolkit": "^2.8.2",
         "@types/bcryptjs": "^3.0.0",
         "@types/crypto-js": "^4.2.2",
         "@types/jsonwebtoken": "^9.0.10",
@@ -31,6 +32,7 @@
         "clsx": "^2.1.1",
         "crypto-js": "^4.2.0",
         "jsonwebtoken": "^9.0.2",
+        "jwt-decode": "^4.0.0",
         "lucide-react": "^0.507.0",
         "next": "15.3.1",
         "next-auth": "^4.24.11",
@@ -39,6 +41,8 @@
         "prisma": "^6.13.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-redux": "^9.2.0",
+        "redux-persist": "^6.0.0",
         "tailwind-merge": "^3.2.0"
     },
     "devDependencies": {
